Fix some Issue xxx

--- a/about.html
+++ b/about.html
@@ -130,18 +130,19 @@
               </div>
             </div>
 
-            <div class="row mb-5">
+           <div class="row mb-5">
               <div class="col-md-12 mb-4">
-                <img src="images/propolis3.jpg" alt="Image placeholder" class="img-fluid">
+               <img src="images/sitio_photo.jpg" alt="Image placeholder" class="img-fluid">
               </div>
               <div class="col-md-6 mb-4">
-                <img src="images/propolis5.jpg" alt="Image placeholder" class="img-fluid">
+                <img src="images/sitio3.jpg" alt="Image placeholder" class="img-fluid">
               </div>
 			        <div class="col-md-6 mb-4">
-                <img src="images/propolis4.jpg" alt="Image placeholder" class="img-fluid">
+                <img src="images/sitio1.jpg" alt="Image placeholder" class="img-fluid">
               </div>
              
             </div>
+			
 
             <div class="row mb-5 mt-5">
               <div class="col-md-12 mb-5">
