--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                <img src="images/sitio_photo.jpg" alt="Image placeholder" class="img-fluid">
               </div>
               <div class="col-md-6 mb-4">
-                <img src="images/sitio3.jpg" alt="Image placeholder" class="img-fluid">
+                <img src="images/sitio_photo1.jpg" alt="Image placeholder" class="img-fluid">
               </div>
 			        <div class="col-md-6 mb-4">
                 <img src="images/sitio1.jpg" alt="Image placeholder" class="img-fluid">
