Update Apiario Ozoraide

--- a/about.html
+++ b/about.html
@@ -132,10 +132,10 @@
 
            <div class="row mb-5">
               <div class="col-md-12 mb-4">
-               <img src="images/sitio_photo.jpg" alt="Image placeholder" class="img-fluid">
+               <img src="images/sitio_photo.jpg" alt="Apiario Ozoraide " class="img-fluid">
               </div>
               <div class="col-md-12 mb-4">
-                <img src="images/sitio_photo1.jpg" alt="Image placeholder" class="img-fluid">
+                <img src="images/sitio_photo1.jpg" alt="Apiario Ozoraide casa do mel" class="img-fluid">
               </div>
 			        
              
